force-app/main/default/objects/ImportLimit__c/ImportLimit__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ImportLimit</label>
</CustomObject>