force-app/main/default/objects/ImportLimit__c/fields/ImportCount__c.field-meta.xml
<CustomField>
    <fullName>ImportCount__c</fullName>
    <label>ImportCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>