force-app/main/default/objects/ImportLimit__c/fields/ImportFile__c.field-meta.xml
<CustomField>
    <fullName>ImportFile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ImportFile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>