force-app/main/default/objects/ImportLimit__c/fields/ImportPage__c.field-meta.xml
<CustomField>
    <fullName>ImportPage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ImportPage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>