force-app/main/default/objects/ImportLimit__c/fields/SobjectName__c.field-meta.xml
<CustomField>
    <fullName>SobjectName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SobjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>